--- a/package.json
+++ b/package.json
@@ -8,22 +8,33 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "dayjs": "^1.8.14",
+    "echarts": "^4.2.1",
+    "element-ui": "^2.10.1",
+    "lodash": "^4.17.14",
+    "mavon-editor": "^2.7.5",
+    "mockjs": "^1.0.1-beta3",
+    "qs": "^6.7.0",
+    "v-charts": "^1.19.0",
     "vue": "^2.6.10",
+    "vue-count-to": "^1.0.13",
+    "vue-image-crop-upload": "^2.5.0",
+    "vue-json-excel": "^0.2.98",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.11.0",
-    "@vue/cli-plugin-eslint": "^3.11.0",
-    "@vue/cli-service": "^3.11.0",
-    "@vue/eslint-config-prettier": "^5.0.0",
+    "@vue/cli-plugin-babel": "^3.8.0",
+    "@vue/cli-plugin-eslint": "^3.8.0",
+    "@vue/cli-service": "^3.8.0",
+    "@vue/eslint-config-prettier": "^4.0.1",
     "babel-eslint": "^10.0.1",
+    "babel-plugin-component": "^1.1.1",
     "eslint": "^5.16.0",
-    "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-vue": "^5.0.0",
     "node-sass": "^4.9.0",
-    "prettier": "^1.18.2",
     "sass-loader": "^7.1.0",
     "vue-template-compiler": "^2.6.10"
   }
