--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "lodash": "^4.17.14",
     "mavon-editor": "^2.7.5",
     "mockjs": "^1.0.1-beta3",
+    "qrcodejs2": "0.0.2",
     "qs": "^6.7.0",
     "v-charts": "^1.19.0",
     "vue": "^2.6.10",
+    "vue-clipboard2": "^0.3.1",
     "vue-count-to": "^1.0.13",
     "vue-image-crop-upload": "^2.5.0",
     "vue-json-excel": "^0.2.98",
