--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vue-count-to": "^1.0.13",
     "vue-image-crop-upload": "^2.5.0",
     "vue-json-excel": "^0.2.98",
+    "vue-lunar-full-calendar": "^1.2.7",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
   },
